syntax = "proto3";
option java_package = "io.onfhir.subscription.model.msg";
option optimize_for = SPEED;
option java_multiple_files = false;

message DDFhirSubscription {
  string id = 1;
  string rtype = 2;
  FhirSubscriptionChannel channel = 3;
  repeated Parameter criteria = 4;
  bytes status = 5;
  optional string expiration = 6;
}

message CriteriaSubscriptions {
  string resourceType = 1;
  repeated Parameter criteria = 2;
  bytes subscriptionIds = 3;
}

message FhirSubscriptionChannel{
  string channelType = 1;
  optional string endpoint = 2;
  optional string payload = 3;
  repeated string headers =4;
}

message Parameter {
  string paramCategory = 1;
  string paramType = 2;
  string name = 3;
  repeated Tuple valuePrefixList = 4;
  string suffix = 5;
  repeated Tuple chain = 6;
}

message SearchParameterConf {
    string pname = 1;
    string ptype = 2;
    repeated string paths = 3;
    repeated string targets = 4;
    repeated string modifiers = 5;
    repeated string targetTypes = 6;
    repeated Restrictions restrictions = 7;
    bool multipleOr = 8;
    bool multiAnd = 9;
    repeated string comparators = 10;
}

message Tuple {
    string item1 = 1;
    string item2 = 2;
}

message Restrictions {
   repeated Tuple values = 1;
}

